--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,12 @@
 <header class="site-header">
 
   <div class="wrapper">
-
+  <!-- Detect if page is index page or not, and display site.title appropriately -->
+  {% if page.url == "/index.html" %}
+  {% else %}
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
+  {% endif %}
+  
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
