this is a nice touch
Signed-off-by: W. S. Wellington <bill@wellingtonnet.net>

--- a/_layouts/frame.html
+++ b/_layouts/frame.html
@@ -13,7 +13,11 @@ layout: default
   </article>
 
   <footer class="post-footer">
+    {% if page.frame_number == 10 %}
+    <h1>Don't forget to bring cash for Game {{ page.game_number | plus: 1 }}, Frame 1</h1>
+    {% else %}
     <h1>Don't forget to bring cash for Frame {{ page.frame_number | plus: 1 }}</h1>
+    {% endif %}
   </footer>
 
 </div>
