making homepage a little more responsive
Signed-off-by: W. S. Wellington <bill@wellingtonnet.net>

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,9 +4,9 @@
 }
 
 h1.homepage-title {
-    font-size: 100px;
+    font-size: 400%;
 }
 
 h2.homepage-title {
-    font-size: 40px;
+    font-size: 250%;
 }
